# SBIR-application

./: .gitignore  README.md  index.html  package-lock.json  package.json
Backend/: main.py  pyproject.toml
Backend/django-pgvector/: README.md  download.py  manage.py  pyproject.toml
Backend/django-pgvector/api/: models.py  urls.py  views.py
Backend/django-pgvector/api/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20250605_1541.py
Backend/django-pgvector/sbir/: asgi.py  settings.py  urls.py  wsgi.py
Backend/lambda/: README.md  lambda.py
Backend/litserve/: README.md  main.py
src/: App.vue  main.js  main.ts  scope.js  scope.ts
src/assets/: main.scss
src/components/: About.vue  AboutView.vue  HomeView.vue  ImageDisplay.vue  SketchCanvas.vue
src/router/: router.ts
